[gd_scene load_steps=11 format=3 uid="uid://bmfsyk3ewppgk"]

[ext_resource type="PackedScene" uid="uid://blxr42w4ow3d4" path="res://tank.tscn" id="1_g666j"]
[ext_resource type="Script" uid="uid://cgw2wunb7ym4q" path="res://main_game_scene.gd" id="1_wpvyo"]
[ext_resource type="PackedScene" uid="uid://dvfjq2r11yaxq" path="res://enemy tank.tscn" id="2_qmwpp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_g666j"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_qmwpp"]
sky_material = SubResource("ProceduralSkyMaterial_g666j")

[sub_resource type="Environment" id="Environment_wpvyo"]
background_mode = 2
sky = SubResource("Sky_qmwpp")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_qmwpp"]
vertices = PackedVector3Array(-99.5, 0.5, -199.5, -99.5, 0.5, 199.5, 99.5, 0.5, 199.5, 99.5, 0.5, -199.5)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]

[sub_resource type="PlaneMesh" id="PlaneMesh_k7j5h"]
size = Vector2(200, 400)

[sub_resource type="BoxShape3D" id="BoxShape3D_g666j"]
size = Vector3(200, 0.5, 400)

[sub_resource type="Curve3D" id="Curve3D_g666j"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 25.235664, 0, 134.42165, 0, 0, 0, 0, 0, 0, 24.582924, 0, 168.03815, 0, 0, 0, 0, 0, 0, 93.55655, 0, 167.38538, 0, 0, 0, 0, 0, 0, 92.79501, 0, 134.09528),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="Main Game scene" type="Node3D"]
script = ExtResource("1_wpvyo")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wpvyo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_qmwpp")

[node name="Player Tank" parent="NavigationRegion3D" instance=ExtResource("1_g666j")]
transform = Transform3D(-1, 0, 2.6226832e-07, 0, 1, 0, -2.6226832e-07, 0, -1, 0, 3.9357252, -53.975273)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_k7j5h")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("BoxShape3D_g666j")

[node name="Path3D" type="Path3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -105.695786, 0, 12.47704)
curve = SubResource("Curve3D_g666j")

[node name="PathFollow3D1" type="PathFollow3D" parent="NavigationRegion3D/Path3D"]
transform = Transform3D(-0.99980944, 0, 0.019413553, 0, 1, 0, -0.019413553, 0, -0.99980944, 25.235664, 0, 134.42165)

[node name="Path3D2" type="Path3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1539001, 0, 10.404584)
curve = SubResource("Curve3D_g666j")

[node name="PathFollow3D2" type="PathFollow3D" parent="NavigationRegion3D/Path3D2"]
transform = Transform3D(-0.99980944, 0, 0.019413553, 0, 1, 0, -0.019413553, 0, -0.99980944, 25.235664, 0, 134.42165)

[node name="Path3D3" type="Path3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.716301, 0, -83.576996)
curve = SubResource("Curve3D_g666j")

[node name="PathFollow3D3" type="PathFollow3D" parent="NavigationRegion3D/Path3D3"]
transform = Transform3D(-0.99981153, 0, 0.019413594, 0, 1, 0, -0.019413594, 0, -0.99981153, 25.235664, 0, 134.42165)

[node name="Enemy Tank" parent="." instance=ExtResource("2_qmwpp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -47.20857, 0.79683304, 152.0339)

[node name="Enemy Tank2" parent="." instance=ExtResource("2_qmwpp")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 48.34266, -1.5258789e-05, 142.74554)

[node name="Enemy Tank3" parent="." instance=ExtResource("2_qmwpp")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 49.546165, 1.5258789e-05, 71.02321)
